--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,11 @@
-header {
+.top {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.heading {
   display: block;
   text-align: center;
   background-color: #5e5c63;
@@ -6,17 +13,17 @@ header {
   border-bottom-width: 0.5%;
   width: 100%;
   margin: 0px auto;
-  left: 0;
-  top: 0;
+
 }
 
-header img {
+#heading img {
   padding-top: 0.1%;
 }
 
 .topnav {
   overflow: hidden;
   background-color: #5e5c63;
+
 }
 .topnav a {
   float: left;
@@ -35,12 +42,7 @@ header img {
   color: black;
 }
 
-body {
-  display: block;
-  top: -10%;
-  text-align: left;
-  font-size: 100%
-}
+
 #border {
   text-align: center;
   border-style: solid;
@@ -54,6 +56,10 @@ body {
 #ukraineIntro {
   padding-top: 1%;
   align-content: center;
+  display: block;
+  top: -10%;
+  text-align: left;
+  font-size: 100%;
 }
 
 #slava {
