--- a/CSS/chernobyl.css
+++ b/CSS/chernobyl.css
@@ -1,7 +1,8 @@
 #reactorInsert {
+  position: relative;
   image-rendering: pixelated;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1%;
+  margin-top: 0%;
 }
