--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,9 +1,11 @@
+
+
 .top {
-  position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-
+  display: table-row;
+  height: 1px;
 }
 
 .heading {
@@ -17,6 +19,7 @@
 
 #heading img {
   padding-top: 0.1%;
+  border-radius: 5%;
 }
 
 .topnav {
@@ -40,19 +43,20 @@
   color: black;
 }
 
-#pageContent
+
 
 #border {
   text-align: center;
   border-style: solid;
   border-right-style: dotted;
   border-left-style: dotted;
-  border-radius: 5px;
+  border-radius: 5%;
   width: 35%;
   margin-left: auto;
   margin-right: auto;
 }
 #ukraineIntro {
+
   padding-top: 1%;
   align-content: center;
   display: block;
@@ -81,15 +85,33 @@
   font-size: 70%;
   text-align: center;
 }
-.bottom {
-  width:100%;
-  position:fixed;
-  left: 0;
-  bottom: 1%;
-  background-color: #5e5c63;
+
+
+
+#pageContent{
+  background-color: white;
+  display: table;
+  height: 100%;
+  width: 100%;
 }
+
+.frame {
+    width: 100%;
+    left: 0;
+}
+
+.bottom {
+  display: table-row;
+  height: 1px;
+  width:100%;
+  height: auto;
+  padding-top: 10%;
+}
+
 #footing {
+  width: 100%;
   text-align: center;
   margin: 0px auto;
   background-color: #5e5c63;
+
 }
