--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,23 +1,24 @@
 
+html, body {
+    margin: 0;
+}
 
 .top {
-  left: 0;
-  top: 0;
   width: 100%;
-  display: table-row;
-  height: 1px;
 }
 
 .heading {
   text-align: center;
   background-color: #5e5c63;
-  border-bottom-style: solid;
   width: 100%;
-  margin: 0px auto;
-
+  border-bottom-style: solid;
+  border-right-style: solid;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
-#heading img {
+.heading img {
   padding-top: 0.1%;
   border-radius: 5%;
 }
@@ -33,17 +34,15 @@
   display: block;
   color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 1% 5%;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 110%;
 }
 
 .topnav a:hover {
   background-color: #e9e9e9;
   color: black;
 }
-
-
 
 #border {
   text-align: center;
@@ -56,11 +55,9 @@
   margin-right: auto;
 }
 #ukraineIntro {
-
   padding-top: 1%;
   align-content: center;
   display: block;
-  top: -10%;
   text-align: left;
   font-size: 100%;
   margin-left: auto;
@@ -76,7 +73,6 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-
 }
 .quote a {
   font-size: 80%;
@@ -86,32 +82,30 @@
   text-align: center;
 }
 
-
-
 #pageContent{
   background-color: white;
-  display: table;
   height: 100%;
   width: 100%;
 }
 
 .frame {
     width: 100%;
-    left: 0;
 }
-
 .bottom {
-  display: table-row;
-  height: 1px;
-  width:100%;
-  height: auto;
-  padding-top: 10%;
+    width: 100%;
+    padding-top: 10%;
 }
-
-#footing {
+#footerHere {
   width: 100%;
-  text-align: center;
-  margin: 0px auto;
-  background-color: #5e5c63;
+}
+#footing {
 
+  border-bottom-style: solid;
+  border-right-style: solid;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  text-align: center;
+  background-color: #5e5c63;
+  width: 100%;
 }
