--- a/CSS/chernobyl.css
+++ b/CSS/chernobyl.css
@@ -3,8 +3,9 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0%;
+  margin: 0;
   text-align: center;
+  font-size: 0;
 }
 
 #pageContent h1 {
@@ -13,7 +14,7 @@
 	background-color: gray;
 	margin-left: auto;
 	margin-right: auto;
-	
+
 }
 
 .center {
