--- a/CSS/crimea.css
+++ b/CSS/crimea.css
@@ -5,7 +5,7 @@
 #crimeaQuestionarre {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 1%;
+    padding-bottom: 1%;
     width: 30%;
     font-size: 100%;
     text-align: center;
