--- a/CSS/main.css
+++ b/CSS/main.css
@@ -39,11 +39,18 @@ html, body {
   padding: 1% 5%;
   text-decoration: none;
   font-size: 110%;
+  border-style: solid;
+  border-color: #5e5c63;
 }
 
 .topnav a:hover {
   background-color: #e9e9e9;
   color: black;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;
+  border-color: black;
+  border-style: solid;
 }
 
 #border {
