--- a/CSS/main.css
+++ b/CSS/main.css
@@ -46,12 +46,15 @@ html, body {
 .topnav a:hover {
   background-color: #e9e9e9;
   color: black;
+}
+.topnav a:active {
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;    /* Firefox, other Gecko */
   box-sizing: border-box;
   border-color: black;
   border-style: solid;
 }
+
 
 #border {
   text-align: center;
